--- a/css/main.scss
+++ b/css/main.scss
@@ -20,9 +20,15 @@ html {
 body {
     position: relative;
     font-family: 'Rajdhani', sans-serif;
-    background-color: $color1;
-    background-color: orange;
+    background-color: $color6;
+    color: $color1;
     min-height: 100%;
+}
+
+#pseudo-header {
+    width: 100%;
+    height: 60px;
+    background-color: orange;
 }
 
 header {
@@ -32,6 +38,7 @@ header {
     height: 60px;
     background-color: $color3;
     display: flex;
+    font-size: 1.1em;
     
     #head-icon-div {
         display: flex;
